--- a/dashboard/bheemili.html
+++ b/dashboard/bheemili.html
@@ -7,8 +7,8 @@
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
-	<link rel="stylesheet" href="D:\Demo\style.css">
-    <link rel="stylesheet" href="D:\Demo\style2.css">
+	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 
 	<title>Coasty Check</title>
 </head>
@@ -117,6 +117,6 @@
     </section>   
        
 	
-	<script src="D:\Demo\script2.js"></script>
+	<script src="script2.js"></script>
 </body>
 </html>
