--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -7,7 +7,7 @@
   <!-- Boxicons -->
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <!-- My CSS -->
-  <link rel="stylesheet" href="D:\Demo\style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
