Updated files and added new features

--- a/dashboard/beaches.html
+++ b/dashboard/beaches.html
@@ -145,6 +145,13 @@
 					<span class="text">Weather Forecast</span>
 				</a>
 			</li>
+      <li>
+        <a href="D:\Demo\dashboard\map.html">
+          <i class='bx bxs-map'></i>
+          <span class="text">Coastal Map</span>
+        </a>
+      </li>
+
     </ul>
 
     <ul class="side-menu">
@@ -155,7 +162,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="B-profile.html">
           <i class='bx bxs-user-circle'></i>
           <span class="text">Profile</span>
         </a>
