--- a/dashboard/cheerai.html
+++ b/dashboard/cheerai.html
@@ -54,6 +54,13 @@
 					<span class="text">Weather Forecast</span>
 				</a>
 			</li>
+			<li>
+				<a href="D:\Demo\dashboard\map.html">
+					<i class='bx bxs-map'></i>
+				  <span class="text">Coastal Map</span>
+				</a>
+			  </li>
+		
 			
 		</ul>
 		<ul class="side-menu">
@@ -82,7 +89,7 @@
 		<main>
 			<div class="head-title">
 				<div class="left">
-					<h1>Cheerai Beach</h1>
+					<h1>Munambam Beach</h1>
 					<ul class="breadcrumb">
 						<li>
 							<a href="#">Check Activities</a>
