--- a/dashboard/notification.html
+++ b/dashboard/notification.html
@@ -22,6 +22,7 @@
             gap: 20px;
             width: 90%;
             max-width: 1200px;
+            padding: 50px;
         }
 
         .form-container {
@@ -153,7 +154,13 @@
 					<span class="text">Weather Forecast</span>
 				</a>
 			</li>
-			
+			<li>
+                <a href="D:\Demo\dashboard\map.html">
+                    <i class='bx bxs-map'></i>
+                  <span class="text">Coastal Map</span>
+                </a>
+              </li>
+        
 		</ul>
 		<ul class="side-menu">
 			<li>
@@ -163,7 +170,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="D:\Demo\dashboard\B-profile.html">
                   <i class='bx bxs-user-circle'></i>
                   <span class="text">Profile</span>
                 </a>
