--- a/dashboard/ocean.html
+++ b/dashboard/ocean.html
@@ -117,6 +117,13 @@ header h1 {
           <span class="text">Weather Forecast</span>
         </a>
       </li>
+      <li>
+        <a href="D:\Demo\dashboard\map.html">
+          <i class='bx bxs-map'></i>
+          <span class="text">Coastal Map</span>
+        </a>
+      </li>
+
 
     </ul>
     <ul class="side-menu">
@@ -127,7 +134,7 @@ header h1 {
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="D:\Demo\dashboard\B-profile.html">
           <i class='bx bxs-user-circle'></i>
           <span class="text">Profile</span>
         </a>
@@ -170,7 +177,7 @@ header h1 {
             <p id="loading">Loading data...</p>
             </main>
         </div>
-    </main>
+   
 
 
 <script>
@@ -255,5 +262,8 @@ function displayData(propertiesData) {
 fetchAlertData();
 
   </script>
+
+</main>
+</section>
 </body>
 </html>
