--- a/dashboard/weather.html
+++ b/dashboard/weather.html
@@ -169,6 +169,12 @@
 					<span class="text">Weather Forecast</span>
 				</a>
 			</li>
+            <li>
+                <a href="D:\Demo\dashboard\map.html">
+                  <i class='bx bxs-map'></i>
+                  <span class="text">Coastal Map</span>
+                </a>
+              </li>
 		</ul>
 		<ul class="side-menu">
 			<li>
@@ -178,7 +184,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="D:\Demo\dashboard\B-profile.html">
                   <i class='bx bxs-user-circle'></i>
                   <span class="text">Profile</span>
                 </a>
