--- a/activitymanager/addactivity.html
+++ b/activitymanager/addactivity.html
@@ -141,22 +141,30 @@
       </li>
 
       <li>
-        <a href="#">
+        <a href="D:\Demo\activitymanager\booking.html">
           <i class='bx bxs-cloud'></i>
-          <span class="text">Bookings</span>
+          <span class="text">Booking History</span>
         </a>
       </li>
+
+      <li>
+        <a href="D:\Demo\activitymanager\review.html">
+          <i class='bx bx-align-justify'></i>
+          <span class="text">Reviews</span>
+        </a>
+      </li>
+
 
     </ul>
     <ul class="side-menu">
       <li>
-        <a href="ocean.html">
+        <a href="#">
           <i class='bx bxs-bell'></i>
           <span class="text">Notifications</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="D:\Demo\activitymanager\A-profile.html#">
           <i class='bx bxs-user-circle'></i>
           <span class="text">Profile</span>
         </a>
@@ -209,6 +217,7 @@
                 <option value="Jet Skiing">Jet Skiing</option>
                 <option value="Parasaling">Parasaling</option>
                 <option value="Boating">Boating</option>
+                <option value="Boating">Scuba Diving</option>
                 <option value="Other">Other</option>
             </select>
 
@@ -229,9 +238,7 @@
                   <select id="beachFilter">
                       <option value="">All Beaches</option>
                       <option value="Munambam Beach">Munambam Beach</option>
-                      <option value="Kuzhupilly Beach">Kuzhupilly Beach</option>
-                      <option value="Puthuvype Beach">Puthuvype Beach</option>
-                      <option value="Cherai Beach">Cherai Beach</option>
+                      
                   </select>
               </div>
               <div class="activity-list" id="activityList"></div>
@@ -281,7 +288,6 @@
                     await set(newActivityRef, {
                         beachName,
                         activityName,
-                      
                         description: activityDescription,
                         location,
                         startTime,
