--- a/activitymanager/index.html
+++ b/activitymanager/index.html
@@ -106,6 +106,52 @@
     .actions button:hover {
         color: #0e5144;
     }
+
+    .container {
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #0077b6;
+    }
+
+    .card {
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 10px 0;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .card img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-right: 15px;
+    }
+
+    .card h2 {
+      color: #005f73;
+      margin: 0;
+    }
+
+    .card p {
+      margin: 5px 0;
+    }
+
+    .card .price {
+      font-weight: bold;
+      color: #007f5f;
+    }
+
+    .card .time {
+      color: #6a0572;
+    }
 </style>
 
   <title>Coasty Check</title>
@@ -141,22 +187,32 @@
       </li>
 
       <li>
-        <a href="#">
+        <a href="D:\Demo\activitymanager\booking.html">
           <i class='bx bxs-cloud'></i>
-          <span class="text">Bookings</span>
+          <span class="text">Booking History</span>
         </a>
       </li>
+
+      <li>
+        <a href="D:\Demo\activitymanager\review.html">
+          <i class='bx bx-align-justify'></i>
+          <span class="text">Reviews</span>
+        </a>
+      </li>
+
+
+
 
     </ul>
     <ul class="side-menu">
       <li>
-        <a href="ocean.html">
+        <a href="#">
           <i class='bx bxs-bell'></i>
           <span class="text">Notifications</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="D:\Demo\activitymanager\A-profile.html">
           <i class='bx bxs-user-circle'></i>
           <span class="text">Profile</span>
         </a>
@@ -204,13 +260,17 @@
         <li>
           <i class='bx bx-body'></i>
           <span class="text">
-            <h3 id="bookCount">0</h3>
+            <h3 id="BookCount">0</h3>
             <p>Number of Bookings</p>
           </span>
         </li>
         
         </li>
       </ul>
+      <div class="container">
+        <h1>Beach Activities</h1>
+        <div id="beach-list"></div>
+      </div>
 
       <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
@@ -243,10 +303,10 @@
 
        // the number of booking
     const fetchBookCount = () => {
-      const bookingRef = ref(db, 'beach-activities');
+      const bookingRef = ref(db, 'bookings');
       onValue(bookingRef, (snapshot) => {
-        const bookCount = snapshot.size || Object.keys(snapshot.val() || {}).length;
-        document.getElementById('BookCount').innerText = bookCount;
+        const BookCount = snapshot.size || Object.keys(snapshot.val() || {}).length;
+        document.getElementById('BookCount').innerText = BookCount;
       });
     };
     
@@ -260,7 +320,78 @@
   </main>
   
 </section>
-  
+<script>
+  // Sample Data
+  const activities = [
+    {
+      name: "Jet Skiing",
+      beach: "Munambam Beach",
+      location: "Kochi, India",
+      price: "₹600 - ₹900/hour",
+      timeSlot: "9:00 AM - 6:00 PM",
+      description: "Jet Skiing at Munambam Beach is an exhilarating and adrenaline-pumping water sport activity. Riders can enjoy speeds of up to 60 km/h and pass through the splendid and elegant coastline in Kochi, Ernakulam. The activity is offered at Munambam Beach",
+      image: "D:/Demo/img/jet.jpg"
+    },
+    {
+      name: "Parasailing",
+      beach: "Munambam Beach",
+      location: "Kochi, India",
+      price: "₹1800/hour (500 Meters)",
+      timeSlot: "10:00 AM - 5:00 PM",
+      description: "Enjoy a breathtaking view from above as you parasail over the ocean.",
+      image: "D:/Demo/img/parasiling.jpg"
+    },
+    {
+      name: "Scuba Diving",
+      beach: "Munambam Beach",
+      location: "Kochi, India",
+      price: "₹3000 - 4000/30-45 Min",
+      timeSlot: "8:00 AM - 5:00 PM",
+      description: "Explore underwater beauty and vibrant marine life.",
+      image: "D:/Demo/img/scuba.jpg"
+    },
+    {
+      name: "Boating ",
+      beach: "Munambam Beach",
+      location: "Kochi, India",
+      price: "₹1000 - 2000/Hour",
+      timeSlot: "10:00 AM - 5:00 PM",
+      description: "Experience the tranquil beauty of Kerala's backwaters with this overnight Alleppey houseboat cruise from Kochi. Float past rural villages, coconut palms, rice paddies and more as you make your way through the narrow channels and expansive waterways known as the Venice of the East. It's one of the best ways to escape the chaos of the city and truly relax and unwind on your trip to India.",
+      image: "D:/Demo/img/boating.jpg"
+    }
+
+
+  ];
+
+  // Render Activities
+  const renderActivities = () => {
+    const beachList = document.getElementById('beach-list');
+    beachList.innerHTML = '';
+
+    activities.forEach(activity => {
+      const card = document.createElement('div');
+      card.className = 'card';
+
+      card.innerHTML = `
+        <img src="${activity.image}" alt="${activity.name}">
+        <div>
+          <h2>${activity.name}</h2>
+          <p><strong>Beach:</strong> ${activity.beach}</p>
+          <p><strong>Location:</strong> ${activity.location}</p>
+          <p class="price"><strong>Price:</strong> ${activity.price}</p>
+          <p class="time"><strong>Time Slot:</strong> ${activity.timeSlot}</p>
+          <p><strong>Description:</strong> ${activity.description}</p>
+        </div>
+      `;
+
+      beachList.appendChild(card);
+    });
+  };
+
+  // Call Render Function
+  renderActivities();
+</script>
+
 
 </body>
 </html>
