--- a/dashboard/bheemili.html
+++ b/dashboard/bheemili.html
@@ -54,6 +54,13 @@
 				  <span class="text">Weather Forecast</span>
 				</a>
 			  </li>
+			  <li>
+				<a href="D:\Demo\dashboard\map.html">
+					<i class='bx bxs-map'></i>
+				  <span class="text">Coastal Map</span>
+				</a>
+			  </li>
+		
 		
 			
 		</ul>
@@ -65,7 +72,7 @@
 			  </a>
 			</li>
 			<li>
-			  <a href="#">
+			  <a href="D:\Demo\dashboard\B-profile.html">
 				<i class='bx bxs-user-circle'></i>
 				<span class="text">Profile</span>
 			  </a>
