Describe the changes in this commit

--- a/activitymanager/addnotification.html
+++ b/activitymanager/addnotification.html
@@ -213,7 +213,7 @@
           <input type="text" id="Name" placeholder="Title">
           <textarea id="Message" placeholder="Message"></textarea>
           <input type="text" id="location" placeholder="Location">
-          <button id="addButton">Post Alert</button>
+          <button id="addButton">Post Notification</button>
         </div>
     
         <!-- Alerts -->
