--- a/dashboard/B-profile.html
+++ b/dashboard/B-profile.html
@@ -167,6 +167,12 @@
           <span class="text">Coastal Map</span>
         </a>
       </li>
+      <li>
+        <a href="D:\Demo\dashboard\review.html">
+          <i class='bx bx-user-check'></i>
+          <span class="text">User Feedback</span>
+        </a>
+      </li>
 
 
     </ul>
@@ -184,7 +190,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="logout">
+        <a href="login.html" class="logout">
           <i class='bx bxs-log-out-circle'></i>
           <span class="text">Logout</span>
         </a>
