--- a/dashboard/activity.html
+++ b/dashboard/activity.html
@@ -192,6 +192,12 @@
 				  <span class="text">Coastal Map</span>
 				</a>
 			  </li>
+			  <li>
+				<a href="D:\Demo\dashboard\review.html">
+				  <i class='bx bx-user-check'></i>
+				  <span class="text">User Feedback</span>
+				</a>
+			  </li>
 		
 		</ul>
 		<ul class="side-menu">
@@ -337,7 +343,7 @@
 	const viewButton = document.createElement('button');
 	viewButton.textContent = 'View';
 	viewButton.addEventListener('click', () =>{
-		window.location.href='cheerai.html';
+		window.location.href='munambam.html';
 	}) ;
 	// delete button
 	const deleteButton = document.createElement('button');
