--- a/dashboard/beaches.html
+++ b/dashboard/beaches.html
@@ -152,6 +152,13 @@
         </a>
       </li>
 
+      <li>
+        <a href="D:\Demo\dashboard\review.html">
+          <i class='bx bx-user-check'></i>
+          <span class="text">User Feedback</span>
+        </a>
+      </li>
+
     </ul>
 
     <ul class="side-menu">
