--- a/dashboard/booking-B.html
+++ b/dashboard/booking-B.html
@@ -100,39 +100,56 @@
 <section id="sidebar">
   <a href="#" class="brand">
     <i class='bx bxs-smile'></i>
-    <span class="text">Activity Manager</span>
+    <span class="text">Beach Admin</span>
   </a>
   <ul class="side-menu top">
     <li class="active">
-      <a href="D:\Demo\activitymanager\index.html">
+      <a href="D:\Demo\dashboard\index.html">
         <i class='bx bxs-dashboard'></i>
         <span class="text">Dashboard</span>
       </a>
     </li>
     <li>
-      <a href="D:\Demo\activitymanager\addactivity.html">
-        <i class='bx bx-swim'></i>
-        <span class="text">ADD Activity</span>
+      <a href="D:\Demo\dashboard\beaches.html">
+        <i class='bx bx-list-ul'></i>
+        <span class="text">ADD Beaches</span>
       </a>
     </li>
+
     <li>
-      <a href="D:\Demo\activitymanager\addnotification.html">
+      <a href="D:\Demo\dashboard\activity.html">
+        <i class='bx bx-body'></i>
+        <span class="text">ADD Activity In-charge</span>
+      </a>
+    </li>
+
+    <li>
+      <a href="D:\Demo\dashboard\notification.html">
         <i class='bx bxs-message-dots'></i>
         <span class="text">ADD Notifications</span>
       </a>
     </li>
     <li>
-      <a href="D:\Demo\activitymanager\booking.html">
+      <a href="D:\Demo\dashboard\weather.html">
         <i class='bx bxs-cloud'></i>
-        <span class="text">Booking History</span>
+        <span class="text">Weather Forecast</span>
       </a>
     </li>
     <li>
-      <a href="D:\Demo\activitymanager\review.html">
-        <i class='bx bx-align-justify'></i>
-        <span class="text">Reviews</span>
+      <a href="D:\Demo\dashboard\map.html">
+        <i class='bx bxs-map'></i>
+        <span class="text">Coastal Map</span>
       </a>
     </li>
+
+    <li>
+      <a href="D:\Demo\dashboard\review.html">
+        <i class='bx bx-user-check'></i>
+        <span class="text">User Feedback</span>
+      </a>
+    </li>
+
+
   </ul>
   <ul class="side-menu">
     <li>
@@ -142,13 +159,13 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="D:\Demo\dashboard\B-profile.html">
         <i class='bx bxs-user-circle'></i>
         <span class="text">Profile</span>
       </a>
     </li>
     <li>
-      <a href="" class="logout">
+      <a href="login.html" class="logout">
         <i class='bx bxs-log-out-circle'></i>
         <span class="text">Logout</span>
       </a>
@@ -156,26 +173,29 @@
   </ul>
 </section>
 <!-- SIDEBAR -->
- <!-- CONTENT -->
- <section id="content">
+
+
+<!-- CONTENT -->
+<section id="content">
 
   <!-- MAIN -->
+
+
   <main>
     <div class="head-title">
       <div class="left">
-        <h1>Dashboard</h1>
+        <h1>Munambam Beach</h1>
         <ul class="breadcrumb">
           <li>
-            <a href="#">Dashboard</a>
+            <a href="#">Check Activities</a>
           </li>
-          <li><i class='bx bx-chevron-right'></i></li>
+          <li><i class='bx bx-chevron-right' ></i></li>
           <li>
-            <a class="active" href="#">Bookings History</a>
+            <a class="active" href="#">Booking History</a>
           </li>
         </ul>
       </div>
-    </div>
-  </main> 
+    </main>
 
 
 <!-- CONTENT -->
