--- a/dashboard/weather.html
+++ b/dashboard/weather.html
@@ -175,6 +175,13 @@
                   <span class="text">Coastal Map</span>
                 </a>
               </li>
+
+              <li>
+                <a href="D:\Demo\dashboard\review.html">
+                  <i class='bx bx-user-check'></i>
+                  <span class="text">User Feedback</span>
+                </a>
+              </li>
 		</ul>
 		<ul class="side-menu">
 			<li>
