--- a/dashboard/map.html
+++ b/dashboard/map.html
@@ -104,6 +104,13 @@
         </a>
       </li>
 
+      <li>
+        <a href="D:\Demo\dashboard\review.html">
+          <i class='bx bx-user-check'></i>
+          <span class="text">User Feedback</span>
+        </a>
+      </li>
+
     </ul>
     <ul class="side-menu">
       <li>
@@ -175,6 +182,7 @@
         switch (alertLevel) {
             case "high": return "red";
             case "moderate": return "orange";
+            case "watch": return "yellow"
             case "low": return "green";
             default: return "gray";
         }
@@ -186,11 +194,11 @@
     { name: "Maharashtra", coordinates: [[18.6, 72.8], [18.8, 73.0], [18.6, 73.2]], alert: "low" },
     { name: "Goa", coordinates: [[15.5, 73.8], [15.8, 74.0], [15.7, 74.2]], alert: "low" },
     { name: "Kerala", coordinates: [[10.0, 76.0], [10.3, 76.5], [10.2, 76.8]], alert: "low" },
-    { name: "Tamil Nadu", coordinates: [[8.6, 78.0], [8.9, 78.4], [8.8, 78.6]], alert: "low" },
-    { name: "Andhra Pradesh", coordinates: [[17.0, 82.0], [17.3, 82.3], [17.1, 82.6]], alert: "moderate" },
-    { name: "Odisha", coordinates: [[19.8, 85.8], [20.0, 86.0], [19.9, 86.3]], alert: "moderate" },
+    { name: "Tamil Nadu", coordinates: [[8.6, 78.0], [8.9, 78.4], [8.8, 78.6]], alert: "watch" },
+    { name: "Andhra Pradesh", coordinates: [[17.0, 82.0], [17.3, 82.3], [17.1, 82.6]], alert: "watch" },
+    { name: "Odisha", coordinates: [[19.8, 85.8], [20.0, 86.0], [19.9, 86.3]], alert: "watch" },
     { name: "West Bengal", coordinates: [[21.6, 87.5], [22.0, 87.7], [21.9, 88.0]], alert: "low" },
-    { name: "Andaman and Nicobar Islands", coordinates: [[6.8, 93.0], [7.2, 93.3], [6.9, 93.5]], alert: "moderate" },
+    { name: "Andaman and Nicobar Islands", coordinates: [[6.8, 93.0], [7.2, 93.3], [6.9, 93.5]], alert: "watch" },
     { name: "Lakshadweep", coordinates: [[10.5, 72.5], [10.8, 73.0], [10.7, 73.2]], alert: "low" },
     { name: "Karnataka", coordinates: [[13.0, 74.0], [13.5, 74.5], [13.3, 74.8]], alert: "low" },
     { name: "Puducherry", coordinates: [[11.9, 79.8], [12.0, 80.0], [11.8, 80.1]], alert: "moderate" },
@@ -201,7 +209,7 @@
     { name: "Chennai", coordinates: [[13.0, 80.2], [13.2, 80.4], [13.1, 80.6]], alert: "moderate" },
     { name: "Mumbai", coordinates: [[18.9, 72.8], [19.1, 73.0], [18.9, 73.2]], alert: "low" },
     { name: "Vijayawada", coordinates: [[16.5, 80.6], [16.7, 80.7], [16.6, 80.9]], alert: "moderate" },
-    { name: "Rameswaram", coordinates: [[9.3, 79.3], [9.4, 79.4], [9.3, 79.5]], alert: "moderate" }
+    { name: "Rameswaram", coordinates: [[9.3, 79.3], [9.4, 79.4], [9.3, 79.5]], alert: "watch" }
 ];
 
 
