--- a/dashboard/ocean.html
+++ b/dashboard/ocean.html
@@ -124,6 +124,13 @@ header h1 {
         </a>
       </li>
 
+      <li>
+        <a href="D:\Demo\dashboard\review.html">
+          <i class='bx bx-user-check'></i>
+          <span class="text">User Feedback</span>
+        </a>
+      </li>
+
 
     </ul>
     <ul class="side-menu">
